--- a/docs/vocs/docs/pages/cli/reth/stage/unwind.mdx
+++ b/docs/vocs/docs/pages/cli/reth/stage/unwind.mdx
@@ -63,6 +63,11 @@ Database:
 
           [possible values: true, false]
 
+      --db.page-size <PAGE_SIZE>
+          Database page size (e.g., 4KB, 8KB, 16KB).
+          NOTE: Can only be set when creating a new database. Default: system default (typically
+          4KB).
+
       --db.max-size <MAX_SIZE>
           Maximum database size (e.g., 4TB, 8MB)
 
