--- a/docs/vocs/docs/pages/cli/reth/node.mdx
+++ b/docs/vocs/docs/pages/cli/reth/node.mdx
@@ -692,6 +692,11 @@ Database:
 
           [possible values: true, false]
 
+      --db.page-size <PAGE_SIZE>
+          Database page size (e.g., 4KB, 8KB, 16KB).
+          NOTE: Can only be set when creating a new database. Default: system default (typically
+          4KB).
+
       --db.max-size <MAX_SIZE>
           Maximum database size (e.g., 4TB, 8MB)
 
@@ -845,6 +850,14 @@ Engine:
 
           Note: This is a no-op on OP Stack.
 
+      --engine.skip-state-root-validation
+          Skip state root validation for fastnode mode. This disables validation of state root hashes during live sync and also automatically disables hashing stages for maximum sync speed at the cost of reduced validation
+
+      --engine.min-blocks-for-pipeline-run <MIN_BLOCKS_FOR_PIPELINE_RUN>
+          Configure the minimum number of blocks required to trigger a pipeline run for backfilling. When the local head is behind the forkchoice head by more than this threshold, the pipeline will be used to backfill blocks instead of downloading them individually
+
+          [default: 32]
+
 ERA:
       --era.enable
           Enable import from ERA1 files
@@ -859,6 +872,10 @@ ERA:
 
           The ERA1 files are read from the remote host using HTTP GET requests parsing headers
           and bodies.
+
+State Database:
+      --statedb.triedb
+          Use `TrieDB` instead of MDBX for state database
 
 Ress:
       --ress.enable
